1.9.6
Core:
  * FIX: Improved error handling when trying to use aggregation objects with
         backends that don't support these object types

1.9.5
Frontend:
  * FIX: Fixed wrong hostname label in service hover menus
  * FIX: Fixed repeated zoom of background image on state updates

Worldmap:
  * FIX: Fixed errors when saving viewport as new map
  * FIX: Fixed rare issue when cloning just added objects
  * FIX: Fixed broken worldmap when using relative objects

Installer:
  * FIX: Fixed displaying wrong backend option "-b" in summary output
  * FIX: Don't display "update backend configuration" confirm in quiet mode
  * FIX: Don't fail updating map configurations when no maps are defined
  * FIX: Don't register demo rotation when using the "-o" option

1.9.4
Core:
  * List of hover menu childs (e.g. services in host object hover) can now be
    left unsorted (keep original sorting). This is useful for aggregation objects
    where the single elements have a defined order and should not be sorted by state
    (Configure this per object by adding the attribute hover_childs_sort=k).

Frontend:
  * On demand automaps: Hostgroup filter in header menu is now a searchable dropdown field 
  * FIX: Fixed moving textbox objects in IE

1.9.3
Core:
  * Multisite auth: Dropped support for WATO folder permissions
    (See
    http://git.mathias-kettner.de/git/?p=check_mk.git;a=commit;h=6a1845bcba346111c391f28dfc3214b0e5dd8876)

Frontend:
  * std_html_bar Gadget: Added new optional parameters "perfdata" to specify
  the perfdata index to show and "border" to enable/disable the border of the
  bar using the values 0/1

1.9.2
Core:
  * The default values for the "url" option of map objects can now be
    configured in the map global sections using the options
    host_url, hostgroup_url, service_url, servicegroup_url, map_url,
    dyngroup_url and aggr_url

1.9.1
Core:
  * FIX: Fixed incompatibility with pecl-http (Cannot redeclare http_redirect()) 